--- a/env0.workflow.yaml
+++ b/env0.workflow.yaml
@@ -1,50 +1,27 @@
 settings:
   environmentRemovalStrategy: detach
-  
+
 environments:
   preprod-bc-eastus2:
     name: PreProd BC East US 2
     templateName: packops-bc
     workspace: preprod-packops-bc-eastus2
-    revision: Testing
+    revision: testing
     requiresApproval: false
 
   preprod-bc-centralus:
     name: PreProd BC Central US
     templateName: packops-bc
     workspace: preprod-packops-bc-centralus
-    revision: Testing
+    revision: testing
     requiresApproval: false
 
   preprod-api-route:
     name: PreProd API Route
     templateName: packops-api-route
     workspace: preprod-packops-api-route
-    revision: Testing
+    revision: testing
     requiresApproval: false
     needs:
       - preprod-bc-eastus2
       - preprod-bc-centralus
-
-  preprod-bc-west2:
-    name: PreProd BC East US 2 Compute Stack
-    templateName: packops-bc
-    workspace: preprod-packops-bc-west2
-    revision: Testing
-    requiresApproval: false
-
-  preprod-bc-centralus2:
-    name: Prod GPU Instance Central US 2
-    templateName: packops-bc
-    workspace: preprod-packops-bc-centralus
-    revision: Testing
-    requiresApproval: false
-
-  preprod-api-route:
-    name: PreProd API Route
-    templateName: packops-api-route
-    workspace: preprod-packops-api-route
-    revision: Testing
-    requiresApproval: false
-    needs:
-      - preprod-bc-centralus2
